--- a/SWAI_UI_20200120/UI_presentation_1/UI_presentation_1/DataTab.storyboard
+++ b/SWAI_UI_20200120/UI_presentation_1/UI_presentation_1/DataTab.storyboard
@@ -27,7 +27,7 @@
                                 </constraints>
                                 <segments>
                                     <segment title="Day"/>
-                                    <segment title="Month"/>
+                                    <segment title="Total"/>
                                 </segments>
                                 <color key="selectedSegmentTintColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
@@ -228,6 +228,56 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="cLj-Ne-1XD">
+                                <rect key="frame" x="60.5" y="191" width="254.5" height="20"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ADV-JD-thB">
+                                        <rect key="frame" x="0.0" y="5" width="10" height="10"/>
+                                        <color key="backgroundColor" red="1" green="0.83234566450000003" blue="0.47320586440000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="10" id="Asz-eC-4FQ"/>
+                                            <constraint firstAttribute="height" constant="10" id="le0-0s-3t5"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Deep Sleep" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="giw-sy-gfG">
+                                        <rect key="frame" x="16" y="3" width="64.5" height="14"/>
+                                        <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="11"/>
+                                        <color key="textColor" red="0.94429987670000004" green="0.97756952050000001" blue="0.9235896468" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cbc-14-H83">
+                                        <rect key="frame" x="86.5" y="5" width="10" height="10"/>
+                                        <color key="backgroundColor" red="1" green="0.5938570205" blue="0.52017337330000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="10" id="4Hd-me-Upl"/>
+                                            <constraint firstAttribute="width" constant="10" id="Kak-7M-eQN"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Snoring" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K51-2o-YZF">
+                                        <rect key="frame" x="102.5" y="3" width="47" height="14"/>
+                                        <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="11"/>
+                                        <color key="textColor" red="0.94429987670000004" green="0.97756952050000001" blue="0.9235896468" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bmv-I5-gWg">
+                                        <rect key="frame" x="155.5" y="5" width="10" height="10"/>
+                                        <color key="backgroundColor" red="0.88562178940000003" green="0.31798480309999999" blue="0.52017337330000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="10" id="5Vg-Ur-m7y"/>
+                                            <constraint firstAttribute="height" constant="10" id="jQX-3c-8v8"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sleep Talking" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H3d-cs-R2b">
+                                        <rect key="frame" x="171.5" y="3" width="83" height="14"/>
+                                        <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="11"/>
+                                        <color key="textColor" red="0.94429987670000004" green="0.97756952050000001" blue="0.9235896468" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="iR9-5T-lpp"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -235,8 +285,10 @@
                             <constraint firstItem="nHS-kL-2Uh" firstAttribute="trailing" secondItem="yon-Aj-MPg" secondAttribute="trailing" constant="10" id="FAl-hK-LTP"/>
                             <constraint firstItem="i0N-WY-0YN" firstAttribute="leading" secondItem="nHS-kL-2Uh" secondAttribute="leading" constant="10" id="H52-IL-WPg"/>
                             <constraint firstItem="yon-Aj-MPg" firstAttribute="top" secondItem="i0N-WY-0YN" secondAttribute="bottom" constant="50" id="IS8-Bd-1A6"/>
+                            <constraint firstItem="cLj-Ne-1XD" firstAttribute="top" secondItem="ImZ-gu-YWU" secondAttribute="bottom" constant="103" id="IxK-Pg-yZT"/>
                             <constraint firstItem="ImZ-gu-YWU" firstAttribute="top" secondItem="nHS-kL-2Uh" secondAttribute="top" constant="20" id="NOY-jn-4hy"/>
                             <constraint firstItem="i0N-WY-0YN" firstAttribute="top" secondItem="ImZ-gu-YWU" secondAttribute="bottom" constant="150" id="eRO-zH-i4e"/>
+                            <constraint firstItem="cLj-Ne-1XD" firstAttribute="centerX" secondItem="XMA-88-dX8" secondAttribute="centerX" id="h35-ab-Rv3"/>
                             <constraint firstItem="ImZ-gu-YWU" firstAttribute="centerX" secondItem="XMA-88-dX8" secondAttribute="centerX" id="tzQ-FG-QyE"/>
                             <constraint firstItem="nHS-kL-2Uh" firstAttribute="trailing" secondItem="i0N-WY-0YN" secondAttribute="trailing" constant="10" id="w6R-jv-bFP"/>
                         </constraints>
